# them-sua-xoa-with-rust

./: .pre-commit-config.yaml  Cargo.toml  README.md
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  release.yml
crates/clorinde/: Cargo.toml
crates/clorinde/src/queries/: users.rs
crates/db/migrations/: 20260309095218_user_tables.sql
crates/db/queries/: users.sql
crates/web-pages/: Cargo.toml
crates/web-pages/src/: layout.rs  root.rs
crates/web-server/: Cargo.toml  Justfile
crates/web-server/src/: config.rs  errors.rs  main.rs  root.rs
docs/: Tech-Stack.md  getting-started.md  troubleshooting.md
infra-as-code/: stack.yaml
infrastructure/: Cargo.toml
infrastructure/src/: main.rs
